--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=5000
+EMAIL_USER=businessbasket0301@gmail.com
+EMAIL_PASS=dcqd ubvp bbab cxya
 DB_URI=mongodb+srv://businessbasket0301:bbipl0301@my-pdf-hub-cluster.ndacx.mongodb.net/?retryWrites=true&w=majority&appName=my-pdf-hub-cluster
